--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.7",
-        "ext-json": "*"
+        "pusher/pusher-php-server": "^3.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
