separate front end components

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "material-design-icons-iconfont": "^3.0.3",
+    "restaurant-manager-vue-chef-library": "^0.1.2",
+    "restaurant-manager-vue-order-library": "^0.1.7",
     "roboto-fontface": "*",
     "vuetify": "^1.2.0"
   },
