--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll"
-  },
-  "dependencies": {
-    "material-design-icons-iconfont": "^3.0.3",
-    "restaurant-manager-vue-chef-library": "^0.1.2",
-    "restaurant-manager-vue-order-library": "^0.1.7",
-    "roboto-fontface": "*",
-    "vuetify": "^1.2.0"
-  },
-  "devDependencies": {
-    "axios": "^0.18",
-    "bootstrap": "^4.0.0",
-    "cross-env": "^5.1",
-    "jquery": "^3.2",
-    "laravel-mix": "^2.0",
-    "lodash": "^4.17.5",
-    "popper.js": "^1.12",
-    "vue": "^2.5.7",
-    "vue-cli-plugin-vuetify": "^0.2.1"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "go": "npm run watch"
+    },
+    "dependencies": {
+        "material-design-icons-iconfont": "^3.0.3",
+        "restaurant-manager-vue-chef-library": "^0.1.2",
+        "restaurant-manager-vue-order-library": "^0.1.14",
+        "roboto-fontface": "*",
+        "vuetify": "^1.2.0"
+    },
+    "devDependencies": {
+        "axios": "^0.18",
+        "bootstrap": "^4.0.0",
+        "cross-env": "^5.1",
+        "jquery": "^3.2",
+        "laravel-mix": "^2.0",
+        "lodash": "^4.17.5",
+        "popper.js": "^1.12",
+        "vue": "^2.5.7",
+        "vue-cli-plugin-vuetify": "^0.2.1"
+    }
 }
